contenido pagina de soluciones geofisica

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                             <ul>
 
                                 <li><a href="solucionesGeomatica.html" class="drop-text">Soluciones Geomática</a></li>
-                                <li><a href="geofisica.html" class="drop-text">Soluciones Geofísica</a></li>
+                                <li><a href="solucionesGeofisica.html" class="drop-text">Soluciones Geofísica</a></li>
                                 <li><a href="geologia.html" class="drop-text">Soluciones Geología</a></li>
 
                             </ul>
