--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
                                 <li><a href="solucionesGeomatica.html" class="drop-text">Soluciones Geomática</a></li>
                                 <li><a href="solucionesGeofisica.html" class="drop-text">Soluciones Geofísica</a></li>
-                                <li><a href="geologia.html" class="drop-text">Soluciones Geología</a></li>
+                                <li><a href="solucionesGeologia.html" class="drop-text">Soluciones Geología</a></li>
 
                             </ul>
                         </li>
