--- a/softwareGeomatica.html
+++ b/softwareGeomatica.html
@@ -117,7 +117,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <div class="col-md-4 gal-img">
                     <a href="softgsGC.html"><img src="images/g1.jpg" alt="w3pvt" class="img-fluid"></a>
                     <div class="gal-info">
-                        <h5>G Calculator<span class="decription">pagina</span></h5>
+                        <h5>GEOGRAPHIC CALCULATOR<span class="decription">Geogaphic Calculator es un poderoso software geodésico con énfasis en sísmica, exploración de energía y datos geográficos para empresas, organizaciones, y usuarios particulares; desarrollado por Blue Marble Geographics. Es ampliamente reconocido como la herramienta más importante para abordar y resolver los más complejos y exigentes retos geodésicos. Profesionales SIG alrededor del mundo eligen Geographic Calculator por ser una herramienta correcta, coherente y certificable.</span></h5>
                     </div>
                 </div>
                 <div class="col-md-4 gal-img">
@@ -136,13 +136,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <div class="col-md-4 gal-img">
                     <a href="softgsGM.html"><img src="images/g3.jpg" alt="w3pvt" class="img-fluid"></a>
                     <div class="gal-info">
-                        <h5>Global Mapper<span class="decription"> soft </span></h5>
+                        <h5>GLOBAL MAPPER <span class="decription"> Global Mapper es un software de sistemas de información geográfica (SIG) desarrollado por Blue Marble Geographics, de precio asequible e increíblemente poderoso; junto con el módulo LiDAR son la combinación perfecta: completa interoperabilidad, procesamiento de datos y facilidad de uso. Global Mapper + Módulo LiDAR es la solución que su compañía necesita.</span></h5>
                     </div>
                 </div>
                 <div class="col-md-4 gal-img">
                     <a href="softgsGML.htm"><img src="images/g3.jpg" alt="w3pvt" class="img-fluid"></a>
                     <div class="gal-info">
-                        <h5>Global Mapper Lidar<span class="decription"> Soft </span></h5>
+                        <h5>GLOBAL MAPPER / MODULO LIDAR<span class="decription"> Soft </span></h5>
                     </div>
                 </div>
                 <div class="col-md-4 gal-img">
