--- a/solucionesGeologia.html
+++ b/solucionesGeologia.html
@@ -209,7 +209,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
  
 
-                                                Los entregables pueden ser dados en CD, DVD, USB y/o discos duros
+                                                Los entregables pueden ser dados en CD, DVD, USB, discos duros y/o plataformas digitales como servidores o nube. 
                                              
                                             
                                         </div>
